src/test/test-models/bad/vector_size_lt_zero.stan
parameters {
  vector[-1] theta;
}
model {
}
